--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     const clamp = (n,min,max)=> Math.max(min, Math.min(max,n));
 
     // 🔗 Paste your deployed Apps Script web app URL here
-    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbz9OW8GWX2FHTD65r7HyDGZGf2k6szuz9AmT4SwPdPrFjWYCl1OK5KzKOvZ2vIrkHt2qQ/exec";
+    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbz9OW8GWX2FHTD65r7HyDGZGf2k6szuz9AmT4SwPdPrFjWYCl1OK5KzKOvZ2vIrkHt2qQ/exec"; // live Apps Script JSON
 
     const PROSPECT_NAMES = [
       'Benjie','Mara','Paolo','Ava','Rico','Shiela','Anton','Grace','Loren','JR',
