--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     .meta-grid{
       display:grid;
-      grid-template-columns: 1fr 2fr;     /* 1/3 : 2/3 */
+      grid-template-columns: 0.8fr 2.2fr;
       gap:12px;
       margin:10px 0 2px;
     }
