--- a/index.html
+++ b/index.html
@@ -30,8 +30,23 @@
     }
     .app{max-width:520px; margin:0 auto; padding:16px 16px 90px}
     /* -------------------------------------------------- Header */
-    .header{position:sticky; top:0; z-index:10; padding:12px 16px; margin:-16px -16px 12px; background:linear-gradient(#f7f9fc, #f8fafc); border-bottom:1px solid var(--line)}
-    .brand{display:flex; align-items:center; gap:10px}
+    .header{
+      position:sticky; top:0; z-index:10;
+      padding:14px 16px 10px; margin:-16px -16px 12px;
+      background:linear-gradient(#f7f9fc,#f8fafc); border-bottom:1px solid var(--line);
+      display:flex; flex-direction:column; align-items:center; gap:8px;
+    }
+    .actions{ position:absolute; right:12px; top:10px; }
+    .logo{
+      width:40px; height:40px; object-fit:contain; display:block;
+      border-radius:8px; box-shadow:0 2px 6px rgba(17,24,39,.12);
+    }
+    .app-title{
+      margin:0; font-size:16px; font-weight:800; color:var(--sn-black); letter-spacing:.2px;
+    }
+    /* (optional) stop using the old .brand/.badge styles */
+    .brand,.badge{ display:none; }
+
     .logo{width:36px; height:36px; border-radius:50%; background:radial-gradient(circle at 35% 35%, #ffd1e3, #f2a6c5 45%, #DD467D 70%); box-shadow:0 2px 6px rgba(221,70,125,.35)}
     .brand h1{font-size:18px; margin:0}
     .badge{display:inline-block; font-size:12px; color:#fff; background:var(--sn-red); padding:2px 8px; border-radius:999px; margin-left:6px}
@@ -148,19 +163,19 @@
   <div class="app">
     <!-- Header -->
     <div class="header">
-      <div class="brand">
-        <img class="logo" src="/supernovacenter.png" alt="Supernova" width="36" height="36"
-             decoding="async" fetchpriority="high">
-        <h1>Supernova <span class="badge">Practice Prompter</span></h1>
-        <div class="actions">
-          <button class="icon-btn" id="btnSettings" title="Settings / Reset" aria-label="Settings">
-            <svg class="gear" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-              <circle cx="12" cy="12" r="3"></circle>
-              <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 1 1-2.83 2.83l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 1 1-4 0v-.09a1.65 1.65 0 0 0-1-1.51 1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 1 1-2.83-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 1 1 0-4h.09a1.65 1.65 0 0 0 1.51-1 1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 1 1 2.83-2.83l.06.06a1.65 1.65 0 0 0 1.82.33h0A1.65 1.65 0 0 0 9 3.09V3a2 2 0 1 1 4 0v.09a1.65 1.65 0 0 0 1 1.51h0a1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 1 1 2.83 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82v0A1.65 1.65 0 0 0 21 9h.09a2 2 0 1 1 0 4H21a1.65 1.65 0 0 0-1.51 1z"></path>
-            </svg>
-          </button>
-        </div>
+      <div class="actions">
+        <button class="icon-btn" id="btnSettings" title="Settings / Reset" aria-label="Settings">
+          <svg class="gear" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="12" r="3"></circle>
+            <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 1 1-2.83 2.83l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 1 1-4 0v-.09a1.65 1.65 0 0 0-1-1.51 1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 1 1-2.83-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 1 1 0-4h.09a1.65 1.65 0 0 0 1.51-1 1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 1 1 2.83-2.83l.06.06a1.65 1.65 0 0 0 1.82.33h0A1.65 1.65 0 0 0 9 3.09V3a2 2 0 1 1 4 0v.09a1.65 1.65 0 0 0 1 1.51h0a1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 1 1 2.83 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82v0A1.65 1.65 0 0 0 21 9h.09a2 2 0 1 1 0 4H21a1.65 1.65 0 0 0-1.51 1z"></path>
+          </svg>
+        </button>
       </div>
+    
+      <!-- centered logo -->
+      <img src="/supernovacenter.png" class="logo" alt="Supernova Center" width="40" height="40" decoding="async" fetchpriority="high">
+      <!-- plain black title -->
+      <h1 class="app-title">Practice Prompter</h1>
     </div>
 
     <!-- Date Scroller -->
@@ -626,6 +641,39 @@
     // Boot
     app.init();
     window.__snpp = app;
+  
+    // Simple horizontal swipe → prev/next week
+    (function enableDateSwipe(){
+      const area = document.querySelector('.date-wrap');
+      if(!area) return;
+  
+      let startX = 0, startY = 0, isTouch = false;
+      const X_THRESH = 40;   // min px for horizontal swipe
+      const Y_LIMIT  = 60;   // guard against vertical scroll
+  
+      area.addEventListener('touchstart', (e) => {
+        const t = e.touches[0];
+        startX = t.clientX; startY = t.clientY; isTouch = true;
+      }, {passive:true});
+  
+      area.addEventListener('touchend', (e) => {
+        if(!isTouch) return; isTouch = false;
+        const t = e.changedTouches[0];
+        const dx = t.clientX - startX;
+        const dy = t.clientY - startY;
+  
+        if (Math.abs(dx) > X_THRESH && Math.abs(dy) < Y_LIMIT) {
+          if (dx < 0) {
+            // swipe left → next week
+            document.getElementById('nextWeek')?.click();
+          } else {
+            // swipe right → previous week
+            document.getElementById('prevWeek')?.click();
+          }
+        }
+      }, {passive:true});
+    })();
+
   </script>
 </body>
 </html>
